Refactor #1 pmd best practices